[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "2.3.0"
tokio = { version = "1", features = ["full"] }
bson = { version = "2.4", features = ["chrono-0_4"] } # Needed for using chrono datetime in doc
futures = "0.3"
serde = {version = "1.0.141", features = ["derive"]}
serde_json = "1.0"
